<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_delete_all_data"
        android:title="@string/delete_all_tasks"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_get_history"
        android:title="@string/history"
        app:showAsAction="never"

        />

    <item
        android:id="@+id/theme_mode"
        android:title="@string/day_mode"
        app:showAsAction="never"
        />

    <!--    <item android:id="@+id/menu_item_calender"-->
    <!--        android:title=""-->
    <!--        android:icon="@drawable/ic_schedule"-->
    <!--        app:showAsAction="always"-->
    <!--        -->
    <!--        />-->
</menu>