<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:isScrollContainer="true"
        android:padding="10dp"
        tools:context=".ui.MainActivity">

        <HorizontalScrollView
            android:id="@+id/HorizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tasks_status_progress_bar">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categories_chip_group"
                style="@style/Widget.MaterialComponents.ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/all_filter_ch"
                    style="@style/mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/learning_filter_ch"
                    style="@style/mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learning"
                    app:chipIcon="@drawable/ic_learn" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/working_filter_ch"
                    style="@style/mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working"
                    app:chipIcon="@drawable/ic_working" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/workingOut_filter_ch"
                    style="@style/mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workout"
                    app:chipIcon="@drawable/ic_work_out" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/health_filter_ch"
                    style="@style/mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health"
                    app:chipIcon="@drawable/ic_health" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/family_filter_ch"
                    style="@style/mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family"
                    app:chipIcon="@drawable/ic_home" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tdd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/ttd"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="5dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HorizontalScrollView"
            app:layout_constraintVertical_bias="0.636"
            tools:listitem="@layout/card_item_layout" />

        <ProgressBar
            android:id="@+id/tasks_status_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="1"
            android:progressBackgroundTint="@color/colorWhite"
            android:progressTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tdd_tv" />

        <TextView
            android:id="@+id/progress_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/tasks_status_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tdd_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:text="1/20" />


        <!--    <ImageView-->
        <!--        android:id="@+id/empty_image_view"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:visibility="gone"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent"-->
        <!--        app:srcCompat="@drawable/ic_no_data_found_error"-->

        <!--        />-->

        <!--    <TextView-->
        <!--        android:id="@+id/empty_tv"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="no tasks found"-->
        <!--        android:textSize="24sp"-->
        <!--        android:textStyle="bold"-->
        <!--        android:visibility="gone"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintHorizontal_bias="0.498"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent"-->
        <!--        app:layout_constraintVertical_bias="0.702" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hideOnScroll="true"
        app:menu="@menu/bottom_app_bar"
        app:navigationIcon="@drawable/ic_growth"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPurple"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>